fix scrolling behavior in mobile
- add momentum based scrolling again
- increase navigation height to force scrollbars
- move fold navigation button to header to avoid rendering issues

fixes #84

--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -2,7 +2,8 @@
   margin: 0 -2vw;
 
   @media (max-width: 639px) {
-    margin: 0 -5vw;
+    margin: 0 -5vw 1px -5vw;
+    min-height: 100%; // force scrollbars to avoid iOS issues
   }
 }
 
